src/test/deca/syntax/invalid/ident_nombre.deca
//  Description :
//            Identificateur commençant par un nombre
//
// Résultat:
//no viable alternative at input 'identificateur'
//
{
1identificateur
}